Removed Context from button as unnecessary - fixed some whitespace

--- a/app/_components/block/block.module.scss
+++ b/app/_components/block/block.module.scss
@@ -3,7 +3,7 @@
   @extend .md-offset-2;
   @extend .md-10;
 
-  :last-child {
+  > p:last-of-type {
     margin-bottom: 0;
   }
 }
